Updates the composer package dependencies.
* removes
  * `codekandis/configurations`

* changes
  * description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
 	"name": "codekandis/sessions",
-	"description": "`codekandis/configurations` is a library providing session handling interfaces and classes.",
+	"description": "`codekandis/sessions` is a library providing session handling interfaces and classes.",
 	"keywords": [
 		"php",
 		"library",
@@ -27,8 +27,7 @@
 		"source": "https://github.com/codekandis/sessions/tree/master"
 	},
 	"require": {
-		"php": "^7.4",
-		"codekandis/configurations": "^0"
+		"php": "^7.4"
 	},
 	"require-dev": {
 		"roave/security-advisories": "dev-master",
